--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -286,6 +286,11 @@ body, html{
   margin-top: -90px;
 }
 
+.inner-container{
+  pointer-events: none;
+  background: #F3F1EB;
+}
+
 /* WOW */
 .ws-title > br{
 	display: none;
@@ -347,8 +352,6 @@ body, html{
     max-width: 1440px;
 }
   }
-
-
 
 
 
@@ -547,4 +550,52 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 ::selection {
   color: #F3F1EB;
   background: #9C643C;
+}
+
+/* info-wrap */
+.info-wrap {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: normal;
+  font-size: 9.5pt;
+}
+
+.info-wrap a{
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: normal;
+  font-size: 9.5pt;
+  text-decoration: underline;
+}
+
+.info-wrap a:hover{
+  text-decoration:none;
+}
+
+.info-wrap h6 {
+  color: #fff;
+}
+
+body {
+  font-size:0.9rem;
+}
+.form-control {
+  font-size: 0.8rem;
+}
+
+.form-label {
+  margin-bottom: 0.50rem;
+}
+
+.dbox{
+  margin-bottom: 15px;
+}
+
+.dbox p{
+  margin-bottom: 0px;
+}
+
+.info-wrap .dbox .icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.2);
 }
