--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -599,3 +599,7 @@ body {
   border-radius: 50%;
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
+
+.number-unicode {
+  unicode-bidi: plaintext;
+}
