--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -339,20 +339,23 @@ body, html{
 
 @media (min-width: 1400px){
 .ws-title{
-    max-width: 1440px;
+    /*max-width: 1440px;*/
+    max-width: 1340px;
 }
 }
 
 
 @media (min-width: 1200px){
   .ws-title{
-    max-width: 1140px;
+    /*max-width: 1140px;*/
+    max-width: 1040px;
 }
   }
 
 @media (min-width: 1400px){
   .ws-title{
-    max-width: 1440px;
+    /*max-width: 1440px;*/
+    max-width: 1340px;
 }
   }
 
@@ -599,8 +602,8 @@ body {
 }
 
 .info-wrap .dbox .icon {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 2px solid rgba(255, 255, 255, 0.2);
 }
@@ -619,4 +622,8 @@ body {
 .select2-container--default .select2-results__option[aria-selected=true] {
   background-color: rgba(156, 100, 60, 0.08) !important;
   color: #9C643C !important;
+}
+
+.card {
+  background: rgba(255, 255, 255, 0.6);
 }
