--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -662,3 +662,213 @@ body {
   .leaflet-map {
     height: 600px;
 }
+
+/* latest News */
+.latest-news{
+  position: relative;
+}
+
+.media {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
+.post-block > a{
+  position: relative;
+}
+
+.post-block > a, .post-block figure > a {
+    display: block;
+    align-self: flex-start !important;
+    overflow: hidden;
+}
+
+.media .media-body {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+}
+
+.post-block__mid img {
+    max-width: 12rem !important;
+}
+.post-block img {
+    width: 100%;
+    max-width: 15rem;
+    margin: 0 !important;
+    transition: transform 0.5s;
+}
+
+.post-cat-group {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.cat-btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  border-width: 0.2rem;
+  border-style: solid;
+  border-radius: 0;
+  padding: 0.2rem 0.5rem;
+  border: none;
+  font-weight: normal;
+  font-size: 0.7rem;
+  margin-bottom: 7px;
+}
+
+.hover-line a {
+  position: relative;
+  display: inline;
+  background-image: linear-gradient(to right, currentColor 0%, currentColor 100%);
+  background-size: 0px 2px;
+  background-position: 0px 95%;
+  transition: background-size 0.25s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
+  padding: 0.1% 0px;
+  background-repeat: no-repeat;
+  color: inherit;
+}
+
+.post-block__mid p {
+  margin-bottom: 1rem;
+  font-weight: normal;
+}
+
+.post-metas ul {
+  margin: 0;
+}
+.post-metas li {
+  position: relative;
+}
+
+.newsletter-content {
+  max-width: 66.5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.weekly-newsletter .newsletter-icon {
+  margin: 0 0 1rem;
+}
+
+.newsletter-icon {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 100%;
+  background: rgba(255, 44, 84, 0.1);
+  text-align: center;
+  line-height: 6rem;
+  margin: 0 auto 3rem;
+}
+
+.newsletter-icon i {
+  font-size: 2.2rem;
+  line-height: 6.2rem;
+  color: var(--primary-color);
+}
+
+.feather {
+  font-family: 'feather' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-send:before {
+  content: "\e924";
+}
+
+.section-title {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.subscription-form .form-group {
+  margin-bottom: 2rem;
+}
+
+.category-list-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: -0.5rem;
+  list-style: none;
+}
+
+.category-list-wrapper li {
+  width: 50%;
+  height: 20rem;
+  padding: 0.5rem;
+}
+
+.category-list-wrapper li .list-inner {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-color);
+  background-size: 100%;
+  background-position: center center;
+  overflow: hidden;
+  transition: all 0.2s;
+}
+
+.post-info-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+}
+
+.post-info-wrapper .counter-inner {
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.post-info-wrapper .cat-title {
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+  color: #F3F1EB;
+  margin: 0;
+}
+
+.post-info-wrapper .counter-inner {
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.post-block__small img{
+  max-width: 70px;
+}
+
+a.color-secondary{
+  color: #9C643C;
+}
+
+.overlay {
+  background-color: rgba(156, 100, 60, 0.6);
+}
