--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -568,13 +568,17 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 /* info-wrap */
 .info-wrap {
-  color: rgba(137, 158, 151, 0.6);
+  color: rgba(187, 187, 169, 1);
   font-weight: normal;
   font-size: 9.5pt;
 }
 
+.info-wrap p{
+  color: rgba(187, 187, 169, 1);
+}
+
 .info-wrap a{
-  color: rgba(137, 158, 151, 0.8);
+  color: rgba(187, 187, 169, 1);
   font-weight: normal;
   font-size: 9.5pt;
   text-decoration: underline;
@@ -613,7 +617,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: 2px solid rgba(137, 158, 151, 0.2);
+  border: 2px solid rgba(187, 187, 169, 1);
 }
 
 .number-unicode {
